[project]
name = "drinkup-agent"
version = "0.1.0"
description = "AI agent service for DrinkUp chatbot and AI interactions"
authors = [
    {name = "DrinkUp Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "mem0ai[graph]>=0.1.116",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-memgraph>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-prebuilt>=0.6.4",
    "typing-extensions>=4.12.0",
    "pymilvus>=2.6.1",
    "greenlet>=3.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
